Cambios en la conexión

--- a/Sistema APE/App.config
+++ b/Sistema APE/App.config
@@ -6,6 +6,9 @@
         <add name="Sistema_APE.Properties.Settings.TIENDADETECNOLOGIAConnectionString"
             connectionString="Data Source=ALFREDOLOPEZ;Initial Catalog=TIENDADETECNOLOGIA;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="Sistema_APE.Properties.Settings.ProyectoFinalTiendaConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=ProyectoFinalTienda;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
