--- a/Sistema APE/Sistema APE.csproj
+++ b/Sistema APE/Sistema APE.csproj
@@ -52,70 +52,83 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Caja.cs">
+    <Compile Include="Models\Categoria.cs" />
+    <Compile Include="Models\Departamento.cs" />
+    <Compile Include="Models\DetalleVenta.cs" />
+    <Compile Include="Models\Empleado.cs" />
+    <Compile Include="Models\Inventario.cs" />
+    <Compile Include="Models\Marca.cs" />
+    <Compile Include="Models\Pedido.cs" />
+    <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\Venta.cs" />
+    <Compile Include="Views\Caja.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Caja.Designer.cs">
+    <Compile Include="Views\Caja.Designer.cs">
       <DependentUpon>Caja.cs</DependentUpon>
     </Compile>
-    <Compile Include="Compras.cs">
+    <Compile Include="Views\Compras.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Compras.Designer.cs">
+    <Compile Include="Views\Compras.Designer.cs">
       <DependentUpon>Compras.cs</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
-    <Compile Include="ModificarProducto.cs">
+    <Compile Include="Views\Form1 - Copy.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ModificarProducto.Designer.cs">
+    <Compile Include="Views\Form1 - Copy.Designer.cs">
+      <DependentUpon>Form1 - Copy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ModificarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ModificarProducto.Designer.cs">
       <DependentUpon>ModificarProducto.cs</DependentUpon>
     </Compile>
-    <Compile Include="CreateProducto.cs">
+    <Compile Include="Views\CreateProducto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CreateProducto.Designer.cs">
+    <Compile Include="Views\CreateProducto.Designer.cs">
       <DependentUpon>CreateProducto.cs</DependentUpon>
     </Compile>
-    <Compile Include="Docente.cs">
+    <Compile Include="Views\Docente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Docente.Designer.cs">
+    <Compile Include="Views\Docente.Designer.cs">
       <DependentUpon>Docente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Views\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Views\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Gerente.cs">
+    <Compile Include="Views\Gerente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Gerente.Designer.cs">
+    <Compile Include="Views\Gerente.Designer.cs">
       <DependentUpon>Gerente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Inventario.cs">
+    <Compile Include="Views\Inventario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Inventario.Designer.cs">
+    <Compile Include="Views\Inventario.Designer.cs">
       <DependentUpon>Inventario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="Views\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="Views\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main.cs">
+    <Compile Include="Views\Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
+    <Compile Include="Views\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Personal.cs" />
-    <Compile Include="Producto.cs" />
-    <Compile Include="Profesor.cs" />
+    <Compile Include="Models\Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProyectoFinalTiendaDataSet.Designer.cs">
@@ -128,28 +141,31 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TIENDADETECNOLOGIADataSet.xsd</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Caja.resx">
+    <EmbeddedResource Include="Views\Caja.resx">
       <DependentUpon>Caja.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ModificarProducto.resx">
+    <EmbeddedResource Include="Views\Form1 - Copy.resx">
+      <DependentUpon>Form1 - Copy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ModificarProducto.resx">
       <DependentUpon>ModificarProducto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CreateProducto.resx">
+    <EmbeddedResource Include="Views\CreateProducto.resx">
       <DependentUpon>CreateProducto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Docente.resx">
+    <EmbeddedResource Include="Views\Docente.resx">
       <DependentUpon>Docente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Views\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Inventario.resx">
+    <EmbeddedResource Include="Views\Inventario.resx">
       <DependentUpon>Inventario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="Views\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
+    <EmbeddedResource Include="Views\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -219,5 +235,6 @@
   <ItemGroup>
     <None Include="Resources\logo.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
