--- a/Sistema APE/Sistema APE.csproj
+++ b/Sistema APE/Sistema APE.csproj
@@ -129,6 +129,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TIENDADETECNOLOGIADataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Views\Pedidos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Pedidos.Designer.cs">
+      <DependentUpon>Pedidos.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\Caja.resx">
       <DependentUpon>Caja.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +160,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Pedidos.resx">
+      <DependentUpon>Pedidos.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
