--- a/Sistema APE/Sistema APE.csproj
+++ b/Sistema APE/Sistema APE.csproj
@@ -75,6 +75,18 @@
       <DependentUpon>Compras.cs</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="Views\DatosEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\DatosEmpleado.Designer.cs">
+      <DependentUpon>DatosEmpleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Empleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Empleados.Designer.cs">
+      <DependentUpon>Empleados.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ModificarProducto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +156,12 @@
     </Compile>
     <EmbeddedResource Include="Views\Caja.resx">
       <DependentUpon>Caja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\DatosEmpleado.resx">
+      <DependentUpon>DatosEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Empleados.resx">
+      <DependentUpon>Empleados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ModificarProducto.resx">
       <DependentUpon>ModificarProducto.cs</DependentUpon>
