--- a/Sistema APE/Sistema APE.csproj
+++ b/Sistema APE/Sistema APE.csproj
@@ -75,6 +75,12 @@
       <DependentUpon>Compras.cs</DependentUpon>
     </Compile>
     <Compile Include="Connection.cs" />
+    <Compile Include="Views\ControlProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ControlProductos.Designer.cs">
+      <DependentUpon>ControlProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\DatosEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,12 +98,6 @@
     </Compile>
     <Compile Include="Views\ModificarProducto.Designer.cs">
       <DependentUpon>ModificarProducto.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\CreateProducto.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\CreateProducto.Designer.cs">
-      <DependentUpon>CreateProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Form1.cs">
       <SubType>Form</SubType>
@@ -142,6 +142,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TIENDADETECNOLOGIADataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Views\NuevoProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NuevoProducto.Designer.cs">
+      <DependentUpon>NuevoProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Pedidos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -157,6 +163,9 @@
     <EmbeddedResource Include="Views\Caja.resx">
       <DependentUpon>Caja.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\ControlProductos.resx">
+      <DependentUpon>ControlProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\DatosEmpleado.resx">
       <DependentUpon>DatosEmpleado.cs</DependentUpon>
     </EmbeddedResource>
@@ -165,9 +174,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ModificarProducto.resx">
       <DependentUpon>ModificarProducto.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\CreateProducto.resx">
-      <DependentUpon>CreateProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -185,6 +191,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\NuevoProducto.resx">
+      <DependentUpon>NuevoProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Pedidos.resx">
       <DependentUpon>Pedidos.cs</DependentUpon>
